--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -10,7 +10,7 @@
             <div id="content">
                 {{ .Content }}
                 <div class="contact-container">
-                <form id="contact" action="//{{ Params.emailservice }}" method="post" center width="300px">
+                <form id="contact" action="//{{ .Params.emailservice }}" method="post" center width="300px">
                   <h3>Contact Me</h3>
                   <h4>Replies Typically Within 24 Hours.</h4>
                   <fieldset>
