--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -21,7 +21,11 @@
             <div id="content">
                 {{ .Content }}
                 <div class="contact-container">
-                <form id="contact" action="//{{ .Params.emailservice }}" method="post" center width="300px">
+                {{ if .Params.netlify }}
+                  <form name="contact" action="thank-you" netlify center width="300px">
+                {{ else }}
+                  <form id="contact" action="//{{ .Params.emailservice }}" method="post" center width="300px">
+                {{ end }}
                   <h4>Replies Typically Within 24 Hours.</h4>
                   <fieldset>
                    <input placeholder="{{ .Params.contactname }}" type="text" name="name" tabindex="1" required autofocus>
@@ -33,7 +37,7 @@
                    <textarea placeholder="{{ .Params.contactmessage}}" name="message" tabindex="3" required></textarea>
                   </fieldset>
                   <fieldset>
-                   <button name="submit" type="submit" id="contact-submit" tabindex="4">Submit</button>
+                   <button name="submit" class="button" type="submit" id="contact-submit" tabindex="4">Submit</button>
                   </fieldset>
               </form>
             </div>
